--- a/lcs.html
+++ b/lcs.html
@@ -33,6 +33,11 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a href="index.html" class="nav-link active">
+                Visualizer
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="old_shit.html" class="nav-link active">
                 Sorting
               </a>
             </li>
