--- a/old_shit.html
+++ b/old_shit.html
@@ -173,15 +173,15 @@
         document.getElementById("sortedNumbers").textContent = "";
       }
 
-      async function insertionSort() {
+      function insertionSort() {
         let start = performance.now();
-        sortedNumbers = await insertionSortHelper([...originalNumbers]);
+        sortedNumbers = insertionSortHelper([...originalNumbers]);
         let end = performance.now();
         displayResults(start, end, "Insertion Sort", sortedNumbers);
         timeComplexityElement.textContent = "Time Complexity: O(n^2)";
       }
 
-      async function insertionSortHelper(arr) {
+      function insertionSortHelper(arr) {
         const n = arr.length;
 
         for (let i = 1; i < n; i++) {
@@ -199,30 +199,32 @@
         return arr;
       }
 
-      async function heapSort() {
+      function heapSort() {
         let start = performance.now();
-        await heapSortHelper([...originalNumbers]);
+        heapSortHelper([...originalNumbers]);
         let end = performance.now();
         displayResults(start, end, "Heap Sort", sortedNumbers);
         timeComplexityElement.textContent = "Time Complexity: O(n log n)";
       }
 
-      async function heapSortHelper(arr) {
+      function heapSortHelper(arr) {
         let n = arr.length;
 
+        // Build max heap
         for (let i = Math.floor(n / 2) - 1; i >= 0; i--) {
-          await heapify(arr, n, i);
+          heapify(arr, n, i);
         }
 
+        // Extract elements from the heap in descending order
         for (let i = n - 1; i > 0; i--) {
           [arr[0], arr[i]] = [arr[i], arr[0]];
-          await heapify(arr, i, 0);
+          heapify(arr, i, 0);
         }
 
         sortedNumbers = arr;
       }
 
-      async function heapify(arr, n, i) {
+      function heapify(arr, n, i) {
         let largest = i;
         let left = 2 * i + 1;
         let right = 2 * i + 2;
@@ -237,33 +239,36 @@
 
         if (largest !== i) {
           [arr[i], arr[largest]] = [arr[largest], arr[i]];
-          await new Promise((resolve) => setTimeout(resolve, 50));
-          await heapify(arr, n, largest);
+          heapify(arr, n, largest);
         }
       }
 
-      async function quickSort() {
+
+      function quickSort() {
         let start = performance.now();
-        await quickSortHelper(
-          [...originalNumbers],
-          0,
-          originalNumbers.length - 1
-        );
+        quickSortHelper([...originalNumbers], 0, originalNumbers.length - 1);
         let end = performance.now();
         displayResults(start, end, "Quick Sort", sortedNumbers);
         timeComplexityElement.textContent =
           "Time Complexity: O(n^2) (worst case) | O(n log n) (average case)";
       }
 
-      async function quickSortHelper(arr, low, high) {
-        if (low < high) {
-          let pi = await partition(arr, low, high);
-          await quickSortHelper(arr, low, pi - 1);
-          await quickSortHelper(arr, pi + 1, high);
+      function quickSortHelper(arr, low, high) {
+        while (low < high) {
+          let pi = partition(arr, low, high);
+
+          // Tail call optimization
+          if (pi - low < high - pi) {
+            quickSortHelper(arr, low, pi - 1);
+            low = pi + 1;
+          } else {
+            quickSortHelper(arr, pi + 1, high);
+            high = pi - 1;
+          }
         }
       }
 
-      async function partition(arr, low, high) {
+      function partition(arr, low, high) {
         let pivot = arr[high];
         let i = low - 1;
 
@@ -271,7 +276,6 @@
           if (arr[j] < pivot) {
             i++;
             [arr[i], arr[j]] = [arr[j], arr[i]];
-            await new Promise((resolve) => setTimeout(resolve, 50));
           }
         }
 
@@ -280,15 +284,16 @@
         return i + 1;
       }
 
-      async function countingSort() {
+
+      function countingSort() {
         let start = performance.now();
-        sortedNumbers = await countingSortHelper([...originalNumbers]);
+        sortedNumbers = countingSortHelper([...originalNumbers]);
         let end = performance.now();
         displayResults(start, end, "Counting Sort", sortedNumbers);
         timeComplexityElement.textContent = "Time Complexity: O(n + k)";
       }
 
-      async function countingSortHelper(arr) {
+      function countingSortHelper(arr) {
         let max = Math.max(...arr);
         let min = Math.min(...arr);
         let count = Array.from({ length: max - min + 1 }, () => 0);
@@ -302,7 +307,6 @@
           while (count[i] > 0) {
             sortedArr.push(i + min);
             count[i]--;
-            await new Promise((resolve) => setTimeout(resolve, 50));
           }
         }
 
