--- a/old_shit.html
+++ b/old_shit.html
@@ -123,7 +123,6 @@
     <p id="compilationTime"></p>
     <p id="timeComplexity"></p>
     <p id="lcsResult"></p>
-
     <script>
       let originalNumbers = [];
       let sortedNumbers = [];
@@ -161,6 +160,12 @@
         let numElements = parseInt(slider.value);
         let minElement = parseInt(document.getElementById("min-slider").value);
         let maxElement = parseInt(document.getElementById("max-slider").value);
+
+        // Validate minElement and maxElement
+        if (minElement > maxElement) {
+          alert("Min Element should not be greater than Max Element.");
+          return;
+        }
 
         for (let i = 0; i < numElements; i++) {
           let number = Math.floor(Math.random() * (maxElement - minElement + 1)) + minElement;
