File Name Changing

--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
               <a href="index.html" class="nav-link active"> Visualizer </a>
             </li>
             <li class="nav-item">
-              <a href="old_shit.html" class="nav-link active"> Sorting </a>
+              <a href="main.html" class="nav-link active"> Sorting </a>
             </li>
             <li class="nav-item">
               <a href="lcs.html" class="nav-link active"> LCS </a>
