--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="main.js" class="nav-link active">
+              <a href="main.html" class="nav-link active">
                 Sorting
               </a>
             </li>
